# polars-levenshtein

./: .gitignore  Makefile  README.md  benchmark.py  requirements.txt  run.py
levenshtein_lib/: Cargo.toml  pyproject.toml
levenshtein_lib/levenshtein_lib/: __init__.py
levenshtein_lib/src/: expressions.rs
