[package]
name = "levenshtein_lib"
version = "0.1.0"
edition = "2021"

# Specify instructions on how to build the library
[lib]
name = "levenshtein_lib"
crate-type = ["cdylib"] # dynamic system library with a C-compatible Foreign Function Interface

[dependencies]
polars = { version = "0.33.2", default-features = false, features = ["fmt"] }
polars-plan = { version = "0.33.2", default-features = false }
# pyo3 0.20.0 failed ot build for me as of 15/10/2023
pyo3 = { version = "0.19.0", features = ["extension-module"] }
pyo3-polars = { version = "0.7.0", features = ["derive"], default-features = false }
